# libcxxsql

./: .gitignore  ChangeLog  Doxyfile.in  Makefile.am  README.git  configure.ac  debuild.in  libcxxsql.m4.in
docbook/: .gitignore  book.xml  dbigrouphavingorder.xml  dbijoinexamplecode.xml  dbijoinexamplesql.xml  dbiresultset.xml  dbiresultsetconstraints.xml  dbiresultsetinsert.xml  dbiresultsetjoins.xml  dbiresultsetupdate.xml  dbisql.xml  install.xml  sqlblobs.xml  sqlcatalogs.xml  sqlconnection.xml  sqlenv.xml  sqlstatement.xml  sqltransactions.xml
examples/: .gitignore  Makefile.am  configure.ac  helloworld.C  testschema.inc.xml
includes/: .gitignore  Makefile.am  buildschema.xsl.in  libcxxsql.mk.in
includes/sql/: Makefile.am  connection.H  connectionfwd.H  connectionobj.H  decimal.H  decimalfwd.H  env.H  envfwd.H  envobj.H  exception.H  exceptionobj.H  fetchblob.H  fetchblobfwd.H  fetchblobobj.H  getinfo.H  insertblob.H  insertblobfwd.H  insertblobobj.H  newstatement.H  newstatementfwd.H  newstatementobj.H  statement.H  statementfwd.H  statementobj.H
includes/sql/dbi/: Makefile.am  constraint.H  constraintfwd.H  constraintobj.H  flavor.H  flavorfwd.H  flavorobj.H  resultset.H  resultsetfwd.H  resultsetobj.H
packaging/debian/: changelog  control  libcxxsql-gmp.soname.lintian-overrides  libcxxsql.soname.lintian-overrides  rules
packaging/fedora/: .gitignore  libcxxsql.spec.in
packaging/freebsd10/devel/libcxxsql/: Makefile.in
packaging/freebsd9/devel/libcxxsql/: Makefile  pkg-descr  pkg-plist
packaging/freebsd9/devel/libcxxsql/files/: patch-sql-decimal_bound_parameter.C  patch-sql-decimal_input_parameter.C
po/: .gitignore  libcxxsql.pot
sql/: .gitignore  Makefile.am  connection.C  dbi_constraint.C  dbi_flavor.C  dbi_resultset.C  decimal_bound_parameter.C  decimal_input_parameter.C  env.C  exampleschema1.xml  exampleschema2.xml  exampleschema3.xml  exception.C  fetchblob.C  getinfo_internal.H  gettext_in.h  insertblob.C  newstatement.C  sql_internal.H  sql_internal_type_list.H  statement.C  testcursor.C  testdbi.C  testdecimal.C  testenv.C  testschema.C  testschematbl.xml  types.C
