AC_PREREQ([2.69])
AC_INIT([libcxx-example], [0.1], [mrsam@courier-mta.com])
AC_CONFIG_SRCDIR([helloworld.C])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CXX

LIBCXX_INIT
LIBCXXSQL_INIT

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
